examples/test/testpolicy6523.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6523
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key40: value32
      key35: value24
      key21: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value9
      podSelector:
        matchLabels:
          key48: value4
          key14: value3
